// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.7)",
          "flex": 1,
          "justifyContent": "center",
          "padding": "5%",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "marginTop": 8,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#393e42",
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "borderTopColor": "#000",
                "borderTopWidth": 1,
              },
              Object {
                "backgroundColor": "#e1e8ee",
                "borderBottomColor": "#e1e1e1",
                "borderTopColor": "#e1e1e1",
              },
              Object {
                "backgroundColor": "transparent",
                "borderBottomWidth": 0,
                "borderTopWidth": 0,
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            onClearText={null}
            placeholder="Search"
            placeholderTextColor="#86939e"
            showLoading={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                Object {
                  "backgroundColor": "#bdc6cf",
                },
                false,
                Object {
                  "borderRadius": 15,
                },
                undefined,
                undefined,
                false,
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#86939e",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "position": "absolute",
                    "top": 15.5,
                  },
                  Object {
                    "left": 16,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "grey",
            "borderBottomWidth": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
            "flexShrink": 1,
            "height": "50%",
            "justifyContent": "center",
            "marginBottom": 8,
            "padding": 8,
          }
        }
      >
        <RCTScrollView
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderBottomColor": "#ccc",
                        "borderBottomWidth": 1,
                        "padding": 8,
                      },
                      Object {
                        "borderBottomWidth": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "padding": 10,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
                          }
                        }
                        style={
                          Object {
                            "tintColor": undefined,
                          }
                        }
                      />
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "flex": 1,
                              "marginLeft": 10,
                            },
                            Object {},
                          ]
                        }
                      >
                        item1
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`renders correctly 2`] = `
<View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.7)",
          "flex": 1,
          "justifyContent": "center",
          "padding": "5%",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "marginTop": 8,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#393e42",
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "borderTopColor": "#000",
                "borderTopWidth": 1,
              },
              Object {
                "backgroundColor": "#e1e8ee",
                "borderBottomColor": "#e1e1e1",
                "borderTopColor": "#e1e1e1",
              },
              Object {
                "backgroundColor": "transparent",
                "borderBottomWidth": 0,
                "borderTopWidth": 0,
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            onClearText={null}
            placeholder="Search"
            placeholderTextColor="#86939e"
            showLoading={false}
            style={
              Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                Object {
                  "backgroundColor": "#bdc6cf",
                },
                false,
                Object {
                  "borderRadius": 15,
                },
                undefined,
                undefined,
                false,
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#86939e",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "position": "absolute",
                    "top": 15.5,
                  },
                  Object {
                    "left": 16,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "grey",
            "borderBottomWidth": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
            "flexShrink": 1,
            "height": "50%",
            "justifyContent": "center",
            "marginBottom": 8,
            "padding": 8,
          }
        }
      >
        <RCTScrollView
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderBottomColor": "#ccc",
                        "borderBottomWidth": 1,
                        "padding": 8,
                      },
                      Object {
                        "borderBottomWidth": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "padding": 10,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../react-native-check-box/img/ic_check_box.png",
                          }
                        }
                        style={
                          Object {
                            "tintColor": undefined,
                          }
                        }
                      />
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "flex": 1,
                              "marginLeft": 10,
                            },
                            Object {},
                          ]
                        }
                      >
                        item1
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`renders correctly 3`] = `
<View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.7)",
          "flex": 1,
          "justifyContent": "center",
          "padding": "5%",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "marginTop": 8,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#393e42",
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "borderTopColor": "#000",
                "borderTopWidth": 1,
              },
              Object {
                "backgroundColor": "#e1e8ee",
                "borderBottomColor": "#e1e1e1",
                "borderTopColor": "#e1e1e1",
              },
              Object {
                "backgroundColor": "transparent",
                "borderBottomWidth": 0,
                "borderTopWidth": 0,
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            onClearText={null}
            placeholder="Search"
            placeholderTextColor="#86939e"
            showLoading={true}
            style={
              Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                Object {
                  "backgroundColor": "#bdc6cf",
                },
                false,
                Object {
                  "borderRadius": 15,
                },
                undefined,
                undefined,
                false,
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#86939e",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "position": "absolute",
                    "top": 15.5,
                  },
                  Object {
                    "left": 16,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "grey",
            "borderBottomWidth": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
            "flexShrink": 1,
            "height": "50%",
            "justifyContent": "center",
            "marginBottom": 8,
            "padding": 8,
          }
        }
      >
        <RCTScrollView
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderBottomColor": "#ccc",
                        "borderBottomWidth": 1,
                        "padding": 8,
                      },
                      Object {
                        "borderBottomWidth": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "padding": 10,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
                          }
                        }
                        style={
                          Object {
                            "tintColor": undefined,
                          }
                        }
                      />
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "flex": 1,
                              "marginLeft": 10,
                            },
                            Object {},
                          ]
                        }
                      >
                        item1
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`renders correctly 4`] = `
<View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.7)",
          "flex": 1,
          "justifyContent": "center",
          "padding": "5%",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "marginTop": 8,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#393e42",
                "borderBottomColor": "#000",
                "borderBottomWidth": 1,
                "borderTopColor": "#000",
                "borderTopWidth": 1,
              },
              Object {
                "backgroundColor": "#e1e8ee",
                "borderBottomColor": "#e1e1e1",
                "borderTopColor": "#e1e1e1",
              },
              Object {
                "backgroundColor": "transparent",
                "borderBottomWidth": 0,
                "borderTopWidth": 0,
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            onClearText={null}
            placeholder="Search"
            placeholderTextColor="#86939e"
            showLoading={true}
            style={
              Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                Object {
                  "backgroundColor": "#bdc6cf",
                },
                false,
                Object {
                  "borderRadius": 15,
                },
                undefined,
                undefined,
                false,
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#86939e",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "position": "absolute",
                    "top": 15.5,
                  },
                  Object {
                    "left": 16,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "grey",
            "borderBottomWidth": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,0.9)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
            "flexShrink": 1,
            "height": "50%",
            "justifyContent": "center",
            "marginBottom": 8,
            "padding": 8,
          }
        }
      >
        <RCTScrollView
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  No matching tags found
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 5,
                "padding": 8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
